c2rust-transpile/tests/snapshots/snapshots__transpile-linux@rotate.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/rotate.linux.rs
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub unsafe extern "C" fn rotate_left_64(
    mut x: ::core::ffi::c_ulonglong,
) -> ::core::ffi::c_ulonglong {
    return (x as ::core::ffi::c_ulong)
        .rotate_left(4 as ::core::ffi::c_int as ::core::ffi::c_ulong as u32)
        as ::core::ffi::c_ulonglong;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn rotate_right_64(
    mut x: ::core::ffi::c_ulonglong,
) -> ::core::ffi::c_ulonglong {
    return (x as ::core::ffi::c_ulong)
        .rotate_right(4 as ::core::ffi::c_int as ::core::ffi::c_ulong as u32)
        as ::core::ffi::c_ulonglong;
}
